[tool.poetry]
name = "poetry-hw"
version = "0.1.0"
description = ""
authors = ["Maxim Rusin <Maxunris@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"
selene = "2.0.0rc2"
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
